dataset1235/2025-2/2868285114/users/1560006455/executions/3649835072_1626817775.log
== RUN (2025-08-21 22:08:34)
-- CODE: 
import math
r = float(input("insira o raio: "))
A = math.pi*(r)**2
print(A)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
insira o raio: 0.031415926535897934
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
insira o raio: 63.61725123519331
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
insira o raio: 478.3879062809779
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
insira o raio: 380.132711084365
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
insira o raio: 14246.10355137289
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
insira o raio: 12.566370614359172
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:10:39)
-- CODE: 
import math
r = float(input("insira o raio: "))
A = math.pi*(r)**2
V = math.pi * r**3 * 4/3
print(round(A, 3)
print(round(V, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 5
    print(round(A, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 5
    print(round(A, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 5
    print(round(A, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 5
    print(round(A, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 5
    print(round(A, 3)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 5
    print(round(A, 3)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:10:52)
-- CODE: 
import math
r = float(input("insira o raio: "))
A = math.pi*(r)**2
V = math.pi * r**3 * 4/3
print(round(A, 3))
print(round(V, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:11:00)
-- CODE: 
import math
r = float(input("insira o raio: "))
A = math.pi*(r)**2
V = math.pi * r**3 * 4/3
print(round(A, 3))
print(round(V, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
